--- a/index.ipynb
+++ b/index.ipynb
@@ -208,8 +208,7 @@
    },
    "outputs": [],
    "source": [
-    "def street_distance(first_neighbor, second_neighbor):\n",
-    "    x= fn[\"ave\"]"
+    "def street_distance(first_neighbor, second_neighbor):\n"
    ]
   },
   {
