--- a/index.ipynb
+++ b/index.ipynb
@@ -388,8 +388,8 @@
    "outputs": [],
    "source": [
     "distances = []\n",
-    "for neighbor in neighbors:\n",
-    "    distance_between = distance(fred, neighbor)\n",
+    "for x in neighbors:\n",
+    "    distance_between = distance(fred, x)\n",
     "    distances.append(distance_between)\n",
     "\n",
     "distances"
